<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PlansFragment">


    <fragment
        android:id="@+id/PlansFragment"
        android:name="com.gotov.getmeapp.main.plans.view.ui.PlansFragment"
        android:label="@string/plans_fragment_label"
        tools:layout="@layout/fragment_plans_page">
        <action
                android:id="@+id/action_PlansFragment_to_PlanFragment"
                app:destination="@id/PlanFragment" />
    </fragment>

    <fragment
            android:id="@+id/EditTaskFragment"
            android:name="com.gotov.getmeapp.main.task.view.ui.EditTaskFragment"
            android:label="Редактировать задачу"
            tools:layout="@layout/fragment_edit_task">
    </fragment>

    <fragment
            android:id="@+id/PlanFragment"
            android:name="com.gotov.getmeapp.main.plan.view.ui.PlanFragment"
            android:label="@string/plan_fragment_label"
            tools:layout="@layout/fragment_plan">
        <action
                android:id="@+id/action_PlanFragment_to_TaskFragment"
                app:destination="@id/TaskFragment" />
    </fragment>

    <fragment
            android:id="@+id/TaskFragment"
            android:name="com.gotov.getmeapp.main.task.view.ui.TaskFragment"
            android:label="@string/task_fragment_label"
            tools:layout="@layout/fragment_plan_task">

        <action
                android:id="@+id/action_TaskFragment_to_EditTaskFragment"
                app:destination="@id/EditTaskFragment" />
    </fragment>

    <fragment
            android:id="@+id/SearchFragment"
            android:name="com.gotov.getmeapp.main.search.view.ui.SearchFragment"
            android:label="@string/search_fragment_label"
            tools:layout="@layout/fragment_search">
        <action
                android:id="@+id/action_SearchFragment_to_UserFragment"
                app:destination="@id/UserFragment" />
    </fragment>

    <fragment
            android:id="@+id/EditProfileFragment"
            android:name="com.gotov.getmeapp.main.editprofile.view.ui.EditProfileFragment"
            android:label="@string/edit_profile_fragment_label"
            tools:layout="@layout/fragment_edit_profile">
    </fragment>

    <fragment
            android:id="@+id/UserFragment"
            android:name="com.gotov.getmeapp.main.profile.view.ui.UserProfileFragment"
            android:label="@string/user_profile_fragment_label"
            tools:layout="@layout/fragment_profile">

        <action
                android:id="@+id/action_UserFragment_to_PlansFragment"
                app:destination="@id/PlansFragment" />
    </fragment>
</navigation>