<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PlansFragment"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


        <TextView
                android:text="@string/plans_page_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

        <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:background="@drawable/ic_layout_bounders">

            <RadioButton
                    android:id="@+id/radio_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/menti_value"
                    android:button="@null"
                    android:textColor="@drawable/ic_custom_switch_text_color"
                    android:textAlignment="center"
                    android:background="@drawable/ic_custom_swith_button_draw"
                    android:checked="true" />


            <RadioButton
                    android:id="@+id/radio_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mentor_value"
                    android:button="@null"
                    android:textColor="@drawable/ic_custom_switch_text_color"
                    android:textAlignment="center"
                    android:background="@drawable/ic_custom_swith_button_draw"
                    android:checked="false" />
        </RadioGroup>

        <HorizontalScrollView

                android:id="@+id/plan_skills"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

            </LinearLayout>
        </HorizontalScrollView>


        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

</ScrollView>