<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        tools:context=".PlanItemFragment">

    <ImageView
            android:id="@+id/avatar_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile_default"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="352dp" />

    <TextView
            android:id="@+id/menti_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="Стив Джобс"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constrainedWidth="true"

            app:layout_constraintStart_toEndOf="@+id/avatar_item_icon"
            app:layout_constraintTop_toTopOf="@+id/avatar_item_icon"
            android:layout_marginStart="10dp" />

    <TextView
            android:id="@+id/menti_item_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="Новый менти"
            android:textColor="@color/black"
            android:textSize="14sp"

            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/menti_item_name"
            app:layout_constraintStart_toStartOf="@+id/menti_item_name" />

    <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/telegram_button_text"
            android:textSize="5dp"
            app:layout_constraintTop_toBottomOf="@+id/menti_item_about"
            app:layout_constraintStart_toEndOf="@+id/avatar_item_icon"
            android:drawableLeft="@drawable/ic_telegram"
            android:layout_marginTop="8dp" />

    <Button
            android:layout_width="130dp"
            android:layout_height="34dp"
            android:drawableLeft="@drawable/ic_apply"
            android:textColor="@android:color/white"
            android:text="@string/apply_button_text"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menti_item_name"
            android:layout_marginTop="12dp"
            android:id="@+id/button"
             />

    <Button

            android:layout_width="130dp"
            android:layout_height="34dp"
            android:drawableLeft="@drawable/ic_reject"
            android:text="@string/reject_button_text"
            android:textSize="9sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:id="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>